--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "styled-components": "^6.0.3",
+    "swr": "^2.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
     "prettier": "^3.0.0"
   }
 }
